tests/errors/source/verbose_after_ident.rs
use duplicate::*;
#[duplicate_item(
	[
		name * [sub1]
	]
)]//duplicate_end
pub struct name(ty);
//item_end
